@@ -1,5 +1,5 @@
 #if !defined(lint) && !defined(__INSIGHT__)
-static const char libbk__rcsid[] = "$Id: b_pollio.c,v 1.24 2003/05/15 19:46:53 seth Exp $";
+static const char libbk__rcsid[] = "$Id: b_pollio.c,v 1.25 2003/05/15 20:44:54 jtt Exp $";
 static const char libbk__copyright[] = "Copyright (c) 2001";
 static const char libbk__contact[] = "<projectbaka@baka.org>";
 #endif /* not lint */
@@ -139,7 +139,7 @@ bk_polling_io_create(bk_s B, struct bk_ioh *ioh, bk_flags flags)
     BK_RETURN(B, NULL);
   }
 
-  if (!(BK_MALLOC(bpi)))
+  if (!(BK_CALLOC(bpi)))
   {
     bk_error_printf(B, BK_ERR_ERR, "Could not allocate bpi: %s\n", strerror(errno));
     goto error;
@@ -779,6 +779,10 @@ bk_polling_io_read(bk_s B, struct bk_polling_io *bpi, bk_vptr **datap, bk_ioh_st
       ret = 1;
     }
     *status = pid->pid_status;
+    if (pidlist_delete(bpi->bpi_data, pid) != DICT_OK)
+    {
+      bk_error_printf(B, BK_ERR_ERR, "Could not delete pid from list: %s\n", pidlist_error_reason(bpi->bpi_data, NULL));
+    }
     pid_destroy(B, pid);
   }
 
@@ -1168,7 +1172,10 @@ bk_polling_io_flush(bk_s B, struct bk_polling_io *bpi, bk_flags flags)
 	  abort();
 #endif /* BK_USING_PTHREADS */
       }
-      pidlist_delete(bpi->bpi_data, pid);
+      if (pidlist_delete(bpi->bpi_data, pid) != DICT_OK)
+      {
+	bk_error_printf(B, BK_ERR_ERR, "Could not delete pid from list: %s\n", pidlist_error_reason(bpi->bpi_data, NULL));
+      }
       // Failure here will not kill the loop since we've already grabbed successor
       pid_destroy(B, pid);
     }
